group 'de.ubleipzig'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

gradle.projectsEvaluated {
    tasks.withType(JavaCompile) {
        options.compilerArgs.add("-Xlint:unchecked")
        options.compilerArgs.add("-Xlint:deprecation")
//                options.compilerArgs.addAll(["--add-modules", "java.se.ee"])
    }
}
dependencies {
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.1'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.1'
    compile group: 'com.github.jsonld-java', name: 'jsonld-java', version: '0.11.1'
    compile group: 'org.apache.commons', name: 'commons-text', version: '1.1'
    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.20.0'
    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
    compile group: 'org.apache.jena', name: 'jena-arq', version: '3.4.0'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
